--- a/test/fixtures/account_transactions.yml
+++ b/test/fixtures/account_transactions.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  date: 2022-01-04 02:42:39
+  date: 2022-01-04 03:50:54
   trans_type: MyString
   amount: 9.99
-  act_num: 1
+  account: one
 
 two:
-  date: 2022-01-04 02:42:39
+  date: 2022-01-04 03:50:54
   trans_type: MyString
   amount: 9.99
-  act_num: 1
+  account: two
