--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 
-  balance: 1.5
+  act_name: MyString
+  act_num: 1
+  act_type: MyString
+  balance: 9.99
 
 two:
-  type: 
-  balance: 1.5
+  act_name: MyString
+  act_num: 1
+  act_type: MyString
+  balance: 9.99
